infrastructure/cilium/ciliumnetpol-prometheus-controlplane.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-to-control-plane
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  egress:
    - toCIDRSet:
        - cidr: 192.168.33.0/24
      toPorts:
        - ports:
            - port: "10257" # kube-controller-manager metrics
              protocol: TCP
            - port: "10259" # kube-scheduler metrics
              protocol: TCP
